<resources>
    <string name="app_name">Inventory Stage 2</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="alert_title">Are you sure ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_delete_error">Product deletion failed !</string>
    <string name="product_delete_success">Product deleted successfully !</string>
    <string name="product_insert_error">Failed to add the product !</string>
    <string name="product_insert_success">Product added successfully !</string>
    <string name="product_update_error">Failed to update the product !</string>
    <string name="product_update_success">Product updated successfully !</string>
    <string name="delete_all_success">All rows deleted !</string>
    <string name="delete_all_error">Error deleting rows</string>
    <string name="main_no_products">There are no products yet.</string>
    <string name="main_no_products_sub">Let\'s start adding them by tapping + button below.</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_supplier">Supplier Phone</string>
    <string name="sale_btn">Sale</string>
    <string name="delete_all_menu">Delete All Products</string>
    <string name="save_menu">Save</string>
    <string name="delete_menu">Delete</string>
    <string name="sale_success">The sale was successful !</string>
    <string name="sale_error">Sale failed !</string>
    <string name="validation_msg">Please enter data in all fields !</string>
    <string name="fields_msg">All fields are required</string>
    <string name="call">Call Supplier</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="product_supplier_name">Supplier</string>
</resources>
