<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/mainColor">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:orientation="vertical">

        <TextView
                style="@style/listLabelTheme"
                android:text="@string/product_name"
                android:textColor="@color/mainProductName"
                android:fontFamily="serif-monospace" />

        <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="@color/mainProductName"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp" />

        <TextView
                style="@style/listLabelTheme"
                android:text="@string/product_price"
                android:textColor="@color/mainProductName"
                android:fontFamily="serif-monospace" />

        <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mainProductName" />

        <TextView
                style="@style/listLabelTheme"
                android:text="@string/product_quantity"
                android:textColor="@color/mainProductName"
                android:fontFamily="serif-monospace" />

        <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@color/mainProductName" />

    </LinearLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/sale"
                android:text="@string/sale_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_gravity="center_horizontal" />

    </RelativeLayout>

</LinearLayout>
